# XenosRecomp

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
ShaderRecomp/: .gitignore  CMakeLists.txt  bin2h.cmake  dxc_compiler.cpp  dxc_compiler.h  main.cpp  pch.h  shader.h  shader_code.h  shader_common.hlsli  shader_recompiler.cpp  shader_recompiler.h
XenosRecomp/: CMakeLists.txt  air_compiler.cpp  air_compiler.h  air_compiler.mm  constant_table.h  dxc_compiler.cpp  main.cpp  pch.h  shader.h  shader_common.h  shader_recompiler.cpp  shader_recompiler.h
